fix: code color change for contrast

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -100,6 +100,6 @@ h4 {
 }
 
 .vp-doc :not(pre)>code {
-  color: #e0000b;
+  color: #e0000b !important;
   margin: 0 3px;
 }
